--- a/style.css
+++ b/style.css
@@ -10,3 +10,9 @@
     border: 2px solid #3c0337;
     background-color: rgb(255, 0, 208);
  }
+ .item{
+    width: 350px;
+    height: 450px;
+    border: 2px solid rgb(0, 255, 166);
+    background-color: rgb(166, 255, 0);
+ }
