--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@
     border: 2px solid rgb(0, 255, 166);
     background-color: rgb(166, 255, 0);
  }
+ .foto{
+    width: 350px;
+    height: 450px;
+    border: 2px solid rgb(0, 255, 166);
+    background-color: rgb(166, 255, 0);
+ }
